--- a/app/src/main/resources/config.properties
+++ b/app/src/main/resources/config.properties
@@ -1,4 +1,4 @@
-#Configuration du jeu Skyjo
-#Mon Feb 10 18:05:03 CET 2025
+#Skyjo Game Configuration
+#Mon Feb 10 22:21:40 CET 2025
 mode=Classique
 theme=Sombre
