--- a/app/src/main/resources/config.properties
+++ b/app/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 #Skyjo Game Configuration
-#Thu Feb 13 19:30:40 CET 2025
+#Thu Feb 13 19:34:07 CET 2025
 mode=Classique
 theme=Sombre
-volume=0.0
+volume=0.06993003991933977
