--- a/app/src/main/resources/config.properties
+++ b/app/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 #Skyjo Game Configuration
-#Thu Feb 13 23:51:41 CET 2025
+#Fri Feb 14 09:49:11 CET 2025
 mode=Classique
 theme=Sombre
-volume=0.41984737192401445
+volume=0.0
