--- a/app/src/main/resources/config.properties
+++ b/app/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 #Skyjo Game Configuration
-#Fri Feb 14 09:49:11 CET 2025
+#Wed Feb 19 18:34:45 CET 2025
 mode=Classique
 theme=Sombre
-volume=0.0
+volume=0.4122136931382973
