--- a/app/src/main/resources/config.properties
+++ b/app/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 #Skyjo Game Configuration
-#Wed Feb 19 18:34:45 CET 2025
+#Sat Feb 22 14:28:48 CET 2025
 mode=Classique
-theme=Sombre
-volume=0.4122136931382973
+theme=Clair
+volume=1.0
