--- a/app/src/main/resources/config.properties
+++ b/app/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 #Skyjo Game Configuration
-#Sat Feb 22 14:28:48 CET 2025
+#Sat Feb 22 14:47:20 CET 2025
 mode=Classique
-theme=Clair
+theme=Sombre
 volume=1.0
