réseau marche mieux

--- a/app/src/main/resources/config.properties
+++ b/app/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 #Skyjo Game Configuration
-#Fri Feb 28 19:11:21 CET 2025
+#Tue Mar 18 09:59:20 CET 2025
 mode=Classique
 theme=Sombre
-volume=0.0
+volume=0.618320610687023
