un peu mieux network mais toujours du bug

--- a/app/src/main/resources/config.properties
+++ b/app/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 #Skyjo Game Configuration
-#Tue Mar 18 09:59:20 CET 2025
+#Mon Apr 28 18:10:03 CEST 2025
 mode=Classique
 theme=Sombre
-volume=0.618320610687023
+volume=0.40458013811184246
